--- a/style.scss
+++ b/style.scss
@@ -1,24 +1,24 @@
-// Variables
+
 $primary-color: #333;
 $secondary-color: #ff6347;
-$background-light: #f4f4f4;
-$background-lighter: #f9f9f9;
+$background-light: lavender;;
+$background-lighter: darkgray;
 $text-color-white: white;
 $font-family-base: Arial, sans-serif;
 
-// Reset
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-// Base styles
+
 body {
   font-family: $font-family-base;
 }
 
-// Sticky Header
+
 .sticky-header {
   position: sticky;
   top: 0;
@@ -53,7 +53,6 @@ body {
   color: $text-color-white;
   text-align: center;
   padding: 100px 20px;
-  height: 600px;
 
   .hero-content {
     h1 {
@@ -90,7 +89,7 @@ body {
 
   .service-card {
     display: inline-block;
-    width: 30%;
+     
     padding: 20px;
     margin: 10px;
     background-color: #fff;
@@ -109,7 +108,7 @@ body {
   }
 }
 
-// Card Grid Section
+ 
 .card-grid-section {
   padding: 50px 20px;
   display: flex;
@@ -136,8 +135,41 @@ body {
     }
   }
 }
+ 
+ 
+ 
 
-// Footer
+.main-container {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+}
+
+
+.main-content {
+  flex: 3;
+}
+
+
+.sidebar {
+  flex: 1;
+  background-color: darkseagreen;;
+  padding: 20px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+  h3 {
+    margin-bottom: 10px;
+    font-size: 1.5rem;
+  }
+  ul {
+    list-style: none;
+    padding: 0;
+    li {
+      margin-bottom: 10px;
+    }
+  }
+}
+
 footer {
   background-color: $primary-color;
   color: $text-color-white;
@@ -149,11 +181,21 @@ footer {
   }
 }
 
-// Media Queries
+@media (max-width: 768px) {
+  .main-container {
+    flex-direction: column;
+  }
+  .sidebar {
+    order: -1;  
+    margin-bottom: 20px;
+  }
+}
+
+ 
 @media (max-width: 768px) {
   .service-card,
   .card {
-    width: 100%;
+    width: 70%;
   }
 }
 
@@ -165,6 +207,6 @@ footer {
 
 @media (min-width: 1024px) {
   .service-card {
-    width: 40%;
+    width: 30%;
   }
 }
